--- a/raspberry/web_interface/index.html
+++ b/raspberry/web_interface/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>RPi Cam Control</title> 
+    <title>RPi Web Server</title> 
     <script type="text/javascript" src="jquery"></script> 
   	<script type="text/javascript">
      var ws = new WebSocket("ws://192.168.10.1:8888/websocket");
